# Project_Scaffold_and_Foundation

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  ERROR_LOG.md  LICENSE  MANIFEST.in  README.md  constants.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements-test.txt  requirements.txt  setup.cfg  tox.ini
core/: alignment.py  types.py
fusion/: __init__.py  exceptions.py
fusion/core/: __init__.py  alignment.py  base.py  modal_tensor.py  schema.py
fusion/utils/: __init__.py  io.py
utils/: config.py  device.py  download.py  helpers.py  io.py  logging.py  metrics.py  registry.py  visualization.py
