[metadata]
name = fusion
version = file: VERSION
author = Fusion Team
description = A multimodal fusion framework for deep learning.
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.9

[options]
install_requires =
    torch
    transformers
    numpy
    Pillow
    tqdm
    pyyaml
    click
packages = find:

[options.entry_points]
console_scripts =
    fusion = fusion.cli.main:cli
